# diorama

./: .gitignore  CMakeLists.txt  collision.cpp  collision.h  common.h  component.cpp  component.h  game.cpp  game.h  glutils.h  load_skp.cpp  load_skp.h  main.cpp  material.cpp  material.h  mathutils.cpp  mathutils.h  mesh.cpp  mesh.h  render.cpp  render.h  resource.h  shadersource.h  world.cpp  world.h
libraries/: README.txt
test_maps/geometry/: large.skp  merge_primitives.skp  negative_scale.skp  normals.skp  openings.skp  texcoords.skp
